Fix ul shift at 768px
Fix media query issue causing ul misalignment at 768px

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -133,3 +133,8 @@ html {
     transform: none !important;
   }
 }
+@media (min-width: 768px) {
+  .md\:pt-6 {
+    padding-left: 2.1rem;
+  }
+}
